--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
         <div class="col-md-6">
           <p><strong>Llevar una luz de alegría, al corazón de nuestra sociedad</strong></p>
           <p>
-            [Aqui va texto]
+           El circo de Chupetín quiere llegar hasta lugares públicos y privados a través del arte circense, en dónde aún no se ha entregado el evangelio de Cristo, o es difícil de llegar.<br>
+	   El segmento infantil es un campo fértil para enseñar los valores, convicciones y principios que establece la palabra de Dios. Aunque el objetivo del circo es llegar a la familia, lo hace por medio de los niños, quienes son la semilla del presente que dará fruto en el mañana.
           </p>
           <blockquote>
-            [Opción de más texto]
+            El circo se levanta como una estrategia frente a las demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>
+	    Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
           </blockquote>
           <a href="#gallery" class="btn btn-skin btn-lg btn-scroll">Galería de fotos</a>
         </div>
