--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <div class="section-heading text-center">
             <div class="wow bounceInDown" data-wow-delay="0.2s">
-              <h2>Nuestra visión</h2>
+              <h2>Visión y Misión</h2>
             </div>
             <p class="wow bounceInUp" data-wow-delay="0.3s">Un objetivo claro, y directo</p>
           </div>
@@ -98,14 +98,13 @@
           <img src="img/img1.jpg" class="img-responsive img-rounded" alt="" />
         </div>
         <div class="col-md-6">
-          <p><strong>Llevar una luz de alegría, al corazón de nuestra sociedad</strong></p>
           <p>
-           El circo de Chupetín quiere llegar hasta lugares públicos y privados a través del arte circense, en dónde aún no se ha entregado el evangelio de Cristo, o es difícil de llegar.<br>
-	   El segmento infantil es un campo fértil para enseñar los valores, convicciones y principios que establece la palabra de Dios. Aunque el objetivo del circo es llegar a la familia, lo hace por medio de los niños, quienes son la semilla del presente que dará fruto en el mañana.
+            El circo de Chupetín quiere llegar hasta lugares públicos y privados a través del arte circense, en dónde aún no se ha entregado el evangelio de Cristo, o es difícil de llegar.<br>
+			El segmento infantil es un campo fértil para enseñar los valores, convicciones y principios que establece la palabra de Dios. Aunque el objetivo del circo es llegar a la familia, lo hace por medio de los niños, quienes son la semilla del presente que dará fruto en el mañana.
           </p>
           <blockquote>
             El circo se levanta como una estrategia frente a las demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>
-	    Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
+			Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
           </blockquote>
           <a href="#gallery" class="btn btn-skin btn-lg btn-scroll">Galería de fotos</a>
         </div>
