--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			El segmento infantil es un campo fértil para enseñar los valores, convicciones y principios que establece la palabra de Dios. Aunque el objetivo del circo es llegar a la familia, lo hace por medio de los niños, quienes son la semilla del presente que dará fruto en el mañana.
           </p>
           <blockquote>
-            El circo se levanta como una estrategia frente a las demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>
+            El circo se levanta como una estrategia frente a la demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>
 			Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
           </blockquote>
           <a href="#gallery" class="btn btn-skin btn-lg btn-scroll">Galería de fotos</a>
