--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="menu">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#intro">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
-                <li><a href="#gallery">Galería</a></li>
-                <li><a href="#contact">Contáctanos</a></li>
+                <li class="active"><a href="#intro"><he1>Inicio</he1></a></li>
+                <li><a href="#about"><he2>Nosotros</he2></a></li>
+                <li><a href="#gallery"><he3>Galería</he3></a></li>
+                <li><a href="#contact"><he4>Contáctanos</he4></a></li>
               </ul>
             </div>
             <!-- /.Navbar-collapse -->
@@ -99,12 +99,12 @@
         </div>
         <div class="col-md-6">
           <p>
+		  <h7>
             El circo de Chupetín quiere llegar hasta lugares públicos y privados a través del arte circense, en dónde aún no se ha entregado el evangelio de Cristo, o es difícil de llegar.<br>
 			El segmento infantil es un campo fértil para enseñar los valores, convicciones y principios que establece la palabra de Dios. Aunque el objetivo del circo es llegar a la familia, lo hace por medio de los niños, quienes son la semilla del presente que dará fruto en el mañana.
+		  </h7>
           </p>
-          <blockquote>
-            El circo se levanta como una estrategia frente a la demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>
-			Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
+          <blockquote>El circo se levanta como una estrategia frente a la demanda de valores de una sociedad que se va quebrando de a poco. Los niños son parte fundamental de este núcleo y deben ser instruidos con espacios de contenido cristiano.<br>Cada evento que se realiza tiene la finalidad de entregar un mensaje de restauración y perdón. Del amor de Dios, al prójimo, a los padres, a la patria, a las autoridades.
           </blockquote>
           <a href="#gallery" class="btn btn-skin btn-lg btn-scroll">Galería de fotos</a>
         </div>
