--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/ico.png">
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -180,10 +181,10 @@
               <div class="item"><a href="img/gallery/1.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/1.jpg" class="img-responsive" alt="img"></a></div>
               <div class="item"><a href="img/gallery/2.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/2.jpg" class="img-responsive " alt="img"></a></div>
               <div class="item"><a href="img/gallery/3.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/3.jpg" class="img-responsive " alt="img"></a></div>
-              <div class="item"><a href="img/gallery/4.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/4.jpg" class="img-responsive " alt="img"></a></div>
-              <div class="item"><a href="img/gallery/5.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/5.jpg" class="img-responsive " alt="img"></a></div>
-              <div class="item"><a href="img/gallery/6.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/6.jpg" class="img-responsive " alt="img"></a></div>
-              <div class="item"><a href="img/gallery/7.jpg" title="Circo 9 de Agosto 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/7.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/4.jpg" title="Chupetín en Curileo 2015" data-lightbox-gallery="gallery1"><img src="img/gallery/4.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/5.jpg" title="Staff Chupetín 2012" data-lightbox-gallery="gallery1"><img src="img/gallery/5.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/6.jpg" title="Chupetín en Purén" data-lightbox-gallery="gallery1"><img src="img/gallery/6.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/7.jpg" title="Chupetín en Iglesia Bautista Pucón" data-lightbox-gallery="gallery1"><img src="img/gallery/7.jpg" class="img-responsive " alt="img"></a></div>
             </div>
           </div>
         </div>
