--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
             </form>
           </div>
           <div class="text-center">
-            <p class="lead"><i class="fa fa-phone"></i> Llámanos +569 6848 2936</p>
+            <p class="lead"><i class="fa fa-phone"></i> Llámanos o escríbenos +569 6848 2936</p>
+			<p class="lead"><i class="fa fa-mail-reply"></i> Escríbenos ministerio@circochupetin.cl</p>
           </div>
         </div>
 
