--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
             </form>
           </div>
           <div class="text-center">
-            <p class="lead"><i class="fa fa-phone"></i> Llámanos o escríbenos +569 6848 2936</p>
-			<p class="lead"><i class="fa fa-mail-reply"></i> Escríbenos ministerio@circochupetin.cl</p>
+            <p class="lead"><i class="fa fa-phone"></i><he1> Llámanos o escríbenos +569 6848 2936</he1></p>
+			<p class="lead"><i class="fa fa-mail"></i><he1> Escríbenos ministerio@circochupetin.cl</he1></p>
           </div>
         </div>
 
