--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           </div>
           <div class="text-center">
             <p class="lead"><i class="fa fa-phone"></i><he1> Llámanos o escríbenos +569 6848 2936</he1></p>
-			<p class="lead"><i class="fa fa-envelope"></i><he1> Escríbenos <a href="mailto:ministerio@circochupetin.cl">ministerio@circochupetin.cl</a></he1></p>
+			<p class="lead"><i class="fa fa-envelope"></i><he1> Escríbenos a <a href="mailto:ministerio@circochupetin.cl">ministerio@circochupetin.cl</a></he1></p>
           </div>
         </div>
 
