--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <title>Circo Chupetín</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
   <!-- CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
