--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
     <div class="container">
 
-      <div class="row">
+      <!--<div class="row">
         <div class="col-lg-8 col-md-offset-2">
           <div class="form-wrapper marginbot-50">
             <div id="sendmessage">Tu mensaje ha sido enviado. Gracias</div>
@@ -242,7 +242,7 @@
 
               <div class="text-center"><button type="submit" class="btn btn-skin btn-block" id="btnContactUs">Enviar Mensaje</button></div>
             </form>
-          </div>
+          </div>-->
           <div class="text-center">
             <p class="lead"><i class="fa fa-whatsapp"></i><he1> Llámanos o escríbenos +569 6848 2936</he1></p>
 			<p class="lead"><i class="fa fa-envelope"></i><he1> Escríbenos a <a href="mailto:ministerio@circochupetin.cl">ministerio@circochupetin.cl</a></he1></p>
