--- a/pauta.html
+++ b/pauta.html
@@ -1,7 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1;url=https://circochupetin.cl/pauta.pdf/">
+<meta http-equiv="Refresh" content="1;url=https://circochupetin.cl/pauta.pdf">
 </head>
-
-
 </html>
