--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/ico.png">
-  <meta name="description" content="">
+  <meta name="description" content="Circo Chupetin, el circo de los colores">
   <meta name="author" content="">
 
   <title>Circo Chupetín</title>
